# CharacterCreator

./: .gitignore  .markdownlint.json  .npmrc  AGENTS.md  CLAUDE.arcanist.md  CLAUDE.chronicler.md  CLAUDE.frontier.md  CLAUDE.md  CLAUDE.packwright.md  CLAUDE.sentinel.md  CLAUDE.tester.md  README.md  README.txt  app.html  classes.js  classes.json  dnd35_gestalt_v4.html  eslint.config.mjs  feats.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  races.js  spells.js  styles.css  temp_classes.js  templates.js  vite-plugin-content.ts  vite.config.ts
.cargo/: config.toml
.claude/: hookify.eslint-on-save.local.md  hookify.rust-verify.local.md  hookify.rustfmt-on-save.local.md  (+1 more)
content/: content.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: computed_view.rs  dispatch.rs  engine.rs  entity.rs  event.rs  expression_eval.rs  ipc.rs  main.rs  operation.rs  pack_loader.rs  plugin_host.rs  predicate.rs  queue.rs  schema_validator.rs  store.rs  subscription.rs  workflow.rs
src-tauri/src/dispatch/: dispatcher.rs  mod.rs  predicate.rs  stack.rs  tests.rs
src-tauri/src/engine/: abilities.rs  character.rs  error.rs  export.rs  feats.rs  mod.rs  query.rs  selection.rs  settings.rs  skills.rs  tests.rs  types.rs
src-tauri/tests/fixtures/test-pack/: manifest.yaml
src-tauri/tests/fixtures/test-pack/entities/classes/: fighter.mdx
src-tauri/tests/fixtures/test-pack/entities/feats/: power-attack.mdx
src-tauri/tests/fixtures/test-pack/entities/races/: human.mdx
(+3289 files in other folders)
