[package]
name = "character-creator"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
tauri-plugin-mcp-bridge = "0.10"

[build-dependencies]
tauri-build = { version = "2", features = [] }
